resources/grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = peg$otherExpectation("start"),
      peg$c1 = function(c) { return b.content("Start", c); },
      peg$c2 = peg$otherExpectation("chapters"),
      peg$c3 = function(c, cc) { return b.contents("Chapters", c, cc); },
      peg$c4 = peg$otherExpectation("chapter"),
      peg$c5 = function(comments, headline, text) { return b.chapter(comments, headline, text); },
      peg$c6 = peg$otherExpectation("headline"),
      peg$c7 = "=",
      peg$c8 = peg$literalExpectation("=", false),
      peg$c9 = function(level, label, caption) { return b.headline(level, label, caption); },
      peg$c10 = peg$otherExpectation("contents"),
      peg$c11 = peg$anyExpectation(),
      peg$c12 = function(c, cc) { return b.contents("Contents", c, cc); },
      peg$c13 = peg$otherExpectation("content"),
      peg$c14 = function(c) { return b.content("Content", c); },
      peg$c15 = peg$otherExpectation("paragraph"),
      peg$c16 = function(c) { return b.content("Paragraph", c); },
      peg$c17 = peg$otherExpectation("paragraph subs"),
      peg$c18 = function(c, cc) { return b.contents("ParagraphSubs", c, cc); },
      peg$c19 = peg$otherExpectation("paragraph sub"),
      peg$c20 = function(c) { return b.content("ParagraphSub", c); },
      peg$c21 = peg$otherExpectation("text of content"),
      peg$c22 = /^[^\r\n]/,
      peg$c23 = peg$classExpectation(["\r", "\n"], true, false),
      peg$c24 = function(text) { return b.text("ContentText", text); },
      peg$c25 = peg$otherExpectation("block element"),
      peg$c26 = "//",
      peg$c27 = peg$literalExpectation("//", false),
      peg$c28 = "{",
      peg$c29 = peg$literalExpectation("{", false),
      peg$c30 = "//}",
      peg$c31 = peg$literalExpectation("//}", false),
      peg$c32 = function(symbol, args, contents) { return b.blockElement(symbol, args, contents); },
      peg$c33 = function(symbol, args) { return b.blockElement(symbol, args); },
      peg$c34 = peg$otherExpectation("inline element"),
      peg$c35 = "@<",
      peg$c36 = peg$literalExpectation("@<", false),
      peg$c37 = /^[^>\r\n]/,
      peg$c38 = peg$classExpectation([">", "\r", "\n"], true, false),
      peg$c39 = ">",
      peg$c40 = peg$literalExpectation(">", false),
      peg$c41 = "}",
      peg$c42 = peg$literalExpectation("}", false),
      peg$c43 = function(symbol, contents) { return b.inlineElement(symbol, contents); },
      peg$c44 = peg$otherExpectation("column"),
      peg$c45 = function(headline, text) { return b.column(headline, text); },
      peg$c46 = peg$otherExpectation("column headline"),
      peg$c47 = "[column]",
      peg$c48 = peg$literalExpectation("[column]", false),
      peg$c49 = function(level, label, caption) { return b.columnHeadline(level, label, caption); },
      peg$c50 = peg$otherExpectation("column contents"),
      peg$c51 = function(c, cc) { return b.contents("ColumnContents", c, cc); },
      peg$c52 = peg$otherExpectation("column content"),
      peg$c53 = function(c) { return b.content("ColumnContent", c); },
      peg$c54 = peg$otherExpectation("column terminator"),
      peg$c55 = "[/column]",
      peg$c56 = peg$literalExpectation("[/column]", false),
      peg$c57 = function(level) { return b.columnTerminator(level); },
      peg$c58 = peg$otherExpectation("bracket argument"),
      peg$c59 = "[",
      peg$c60 = peg$literalExpectation("[", false),
      peg$c61 = "]",
      peg$c62 = peg$literalExpectation("]", false),
      peg$c63 = function(c) { return b.content("BracketArg", c); },
      peg$c64 = peg$otherExpectation("bracket arg subs"),
      peg$c65 = function(c, cc) { return b.contents("BracketArgSubs", c, cc); },
      peg$c66 = peg$otherExpectation("bracket arg sub"),
      peg$c67 = function(c) { return b.content("BracketArgSub", c); },
      peg$c68 = peg$otherExpectation("text of bracket arg"),
      peg$c69 = "\\\\",
      peg$c70 = peg$literalExpectation("\\\\", false),
      peg$c71 = "\\]",
      peg$c72 = peg$literalExpectation("\\]", false),
      peg$c73 = "\\",
      peg$c74 = peg$literalExpectation("\\", false),
      peg$c75 = function(text) { return b.text("BracketArgText", text); },
      peg$c76 = peg$otherExpectation("brace argument"),
      peg$c77 = /^[^\r\n}\\]/,
      peg$c78 = peg$classExpectation(["\r", "\n", "}", "\\"], true, false),
      peg$c79 = "\\}",
      peg$c80 = peg$literalExpectation("\\}", false),
      peg$c81 = function(arg) { return b.braceArg(arg); },
      peg$c82 = peg$otherExpectation("contents of block element"),
      peg$c83 = function(c, cc) { return b.contents("BlockElementContents", c, cc); },
      peg$c84 = peg$otherExpectation("content of block element"),
      peg$c85 = function(c) { return b.content("BlockElementContent", c); },
      peg$c86 = peg$otherExpectation("paragraph in block"),
      peg$c87 = peg$otherExpectation("paragraph subs in block"),
      peg$c88 = peg$otherExpectation("paragraph sub in block"),
      peg$c89 = peg$otherExpectation("text of content in block"),
      peg$c90 = peg$otherExpectation("contents of inline element"),
      peg$c91 = function(c, cc) { return b.contents("InlineElementContents", c, cc); },
      peg$c92 = peg$otherExpectation("content of inline element"),
      peg$c93 = function(c) { return b.content("InlineElementContent", c); },
      peg$c94 = peg$otherExpectation("text of inline element"),
      peg$c95 = function(text) { return b.text("InlineElementContentText", text.flatMap(function(x) { return x.filter(function(y) { return y != null; }); }).join("")); },
      peg$c96 = peg$otherExpectation("char of inline element content"),
      peg$c97 = "\r\n",
      peg$c98 = peg$literalExpectation("\r\n", false),
      peg$c99 = "\n",
      peg$c100 = peg$literalExpectation("\n", false),
      peg$c101 = function(char) { return char; },
      peg$c102 = function() { return "\\"; },
      peg$c103 = function() { return "\u007D"; },
      peg$c104 = peg$otherExpectation("inline content"),
      peg$c105 = function(c) { return b.content("SinglelineContent", c); },
      peg$c106 = peg$otherExpectation("children of inline content"),
      peg$c107 = function(c, cc) { return b.contents("ContentInlines", c, cc); },
      peg$c108 = peg$otherExpectation("child of inline content"),
      peg$c109 = function(c) { return b.content("ContentInline", c); },
      peg$c110 = peg$otherExpectation("text of child of inline content"),
      peg$c111 = function(text) { return b.text("ContentInlineText", text); },
      peg$c112 = peg$otherExpectation("ulist"),
      peg$c113 = function(c, cc) { return b.contents("Ulist", c, cc); },
      peg$c114 = peg$otherExpectation("ulist element"),
      peg$c115 = " ",
      peg$c116 = peg$literalExpectation(" ", false),
      peg$c117 = "*",
      peg$c118 = peg$literalExpectation("*", false),
      peg$c119 = function(level, text) { return b.ulistElement(level, text); },
      peg$c120 = peg$otherExpectation("olist"),
      peg$c121 = function(c, cc) { return b.contents("Olist", c, cc); },
      peg$c122 = peg$otherExpectation("olist element"),
      peg$c123 = ".",
      peg$c124 = peg$literalExpectation(".", false),
      peg$c125 = function(n, text) { return b.olistElement(n, text); },
      peg$c126 = peg$otherExpectation("dlist"),
      peg$c127 = function(c, cc) { return b.contents("Dlist", c, cc); },
      peg$c128 = peg$otherExpectation("dlist element"),
      peg$c129 = ":",
      peg$c130 = peg$literalExpectation(":", false),
      peg$c131 = function(text, content) { return b.dlistElement(text, content); },
      peg$c132 = peg$otherExpectation("contents of dlist element"),
      peg$c133 = function(c, cc) { return b.contents("DlistElementContents", c, cc); },
      peg$c134 = peg$otherExpectation("content of dlist element"),
      peg$c135 = /^[ \t]/,
      peg$c136 = peg$classExpectation([" ", "\t"], false, false),
      peg$c137 = function(c) { return b.content("DlistElementContent", c); },
      peg$c138 = peg$otherExpectation("signle line comments"),
      peg$c139 = function(c, cc) { return b.contents("SinglelineComments", c, cc); },
      peg$c140 = peg$otherExpectation("signle line comment"),
      peg$c141 = "#@",
      peg$c142 = peg$literalExpectation("#@", false),
      peg$c143 = function(text) { return b.text("SinglelineComment", text); },
      peg$c144 = peg$otherExpectation("digits"),
      peg$c145 = peg$otherExpectation("digit"),
      peg$c146 = /^[0-9]/,
      peg$c147 = peg$classExpectation([["0", "9"]], false, false),
      peg$c148 = peg$otherExpectation("lower alphabet"),
      peg$c149 = /^[a-z]/,
      peg$c150 = peg$classExpectation([["a", "z"]], false, false),
      peg$c151 = peg$otherExpectation("newline"),
      peg$c152 = peg$otherExpectation("blank lines"),
      peg$c153 = peg$otherExpectation("spacer"),
      peg$c154 = /^[ \t\r\n]/,
      peg$c155 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c156 = peg$otherExpectation("space"),
      peg$c157 = /^[ \u3000\t]/,
      peg$c158 = peg$classExpectation([" ", "\u3000", "\t"], false, false),
      peg$c159 = peg$otherExpectation("end of file"),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseChapters();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parseChapters() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseChapter();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseChapters();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseChapter() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseSinglelineComments();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseHeadline();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseContents();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseHeadline() {
    var s0, s1, s2, s3, s4, s5;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    if (input.charCodeAt(peg$currPos) === 61) {
      s2 = peg$c7;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (input.charCodeAt(peg$currPos) === 61) {
          s2 = peg$c7;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseBraceArg();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSpace();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSpace();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseSinglelineContent();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_l();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9(s1, s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }

    return s0;
  }

  function peg$parseContents() {
    var s0, s1, s2, s3, s4;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }
    peg$silentFails--;
    if (s2 !== peg$FAILED) {
      peg$currPos = s1;
      s1 = void 0;
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseContent();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseContents();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_l();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c12(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }

    return s0;
  }

  function peg$parseContent() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseSinglelineComment();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c14(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseBlockElement();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c14(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseUlist();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c14(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseOlist();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c14(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseDlist();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseParagraph();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c14(s1);
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseColumn();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c14(s1);
                }
                s0 = s1;
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }

    return s0;
  }

  function peg$parseParagraph() {
    var s0, s1, s2, s3;
